# pymgclient

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CHANGELOG.rst  MANIFEST.in  README.md  appveyor.yml  connection.html  cursor.html  genindex.html  index.html  introduction.html  module.html  objects.inv  py-modindex.html  pymgclient_build_meta.py  pyproject.toml  pytest.ini  search.html  searchindex.js  setup.cfg  setup.py  usage.html
.github/workflows/: build_docs.yml  ci.yml  release.yml  reusable_buildtest.yml
_sources/: connection.rst.txt  cursor.rst.txt  index.rst.txt  introduction.rst.txt  module.rst.txt  usage.rst.txt
_static/: documentation_options.js
docs/source/: .index.rst.swp  conf.py  introduction.rst  module.rst  usage.rst
python/mgclient/: __init__.py  routing.py
src/: column.c  column.h  connection-int.c  connection.c  connection.h  cursor.c  cursor.h  exceptions.h  glue.c  glue.h  mgclientmodule.c  router.c  router.h  types.c  types.h
test/: common.py  conftest.py  memory_leak.py  test_connection.py  test_cursor.py  test_glue.py  test_multi_tenancy.py  test_routing.py  test_types.py
test/auth_module/: dummy_auth_module.py
tools/: Dockerfile.manylinux  Dockerfile.ubuntu  build-openssl.sh  build-wheel-manylinux.sh  build-wheel.sh  get_memgraph_version.sh  install_linux_deps.sh  pymgclient_build_meta.py  wait_for_memgraph.sh
